[ftu] Ensure button wraps if needed

--- a/apps/ftu/style/main.css
+++ b/apps/ftu/style/main.css
@@ -199,5 +199,6 @@ sl-input::part(password-toggle-button) {
 #identity-panel .identity-add {
   margin-top: 1em;
   display: flex;
+  flex-wrap: wrap;
   gap: 0.5em;
 }
